syntax = "proto3";

package basic.hoge.v1;
option go_package = "github.com/kzmake/examples/basic-service-invocation/api/hoge/v1;hoge";

import "google/api/annotations.proto";

service Hoge {
  rpc Fuga(FugaRequest) returns (FugaResponse) {
    option (google.api.http) = {
      get: "/hoge/fuga"
    };
  }
}

message FugaRequest {}

message FugaResponse {
  string msg = 1;
}
